--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "skazki studio api",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "test": "nodemon src/index.js",
+    "start":"node src/index.js"
   },
   "author": "daniriolo",
   "license": "ISC",
